--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,43 @@
-# System and IDE files
-Thumbs.db
-.DS_Store
-.idea
-*.suo
-*.sublime-project
-*.sublime-workspace
+## Generic git ignore copied from https://github.com/microsoft/TypeScript-Node-Starter/blob/master/.gitignore
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.swp
 
-# Vendors
-node_modules/
+pids
+logs
+results
+tmp
 
 # Build
-/npm-debug.log
+public/css/main.css
+
+# Coverage reports
+coverage
+
+# API keys and secrets
+.env
+
+# Dependency directory
+node_modules
+bower_components
+
+# Editors
+.idea
+*.iml
+
+# OS metadata
+.DS_Store
+Thumbs.db
+
+# Ignore built ts files
+dist/**/*
+
+# ignore yarn.lock
+yarn.lock
+package-lock.json
